# captain-apostille

./: .env.example  .gitignore  ADMIN_GUIDE.md  Cargo.toml
clients/cr-one-edge-01/: README.txt  connection.env
clients/test-device-01/: README.txt  connection.env
clients/verify-device-01/: README.txt  connection.env
deploy/: captain-apostille.service  captain-mast.service  ec2-install.sh
deploy/config/: apostille.conf  mast.conf
examples/: apostille.conf
scripts/: dev-run.sh  dev-setup.sh  register-client.sh  test-client.sh
src/: config.rs  error.rs  main.rs
src/ca/: issuer.rs  mod.rs  store.rs
src/enrollment/: handlers.rs
src/server/: mod.rs  tls.rs
